# holmes-stat

./: CMakeLists.txt  README.md
cmake/: FindFLINT.cmake  FindGMP.cmake  FindMPFR.cmake
graph/: graph_chi_squared.cpp  graph_chi_squared_dataset1.cpp  graph_f_test.cpp  graph_f_test_dataset1.cpp  graph_t_test.cpp  graph_t_test_dataset1.cpp  graph_z_test.cpp  graph_z_test_dataset1.cpp
graph-scripts/: common.py  graph_chi_squared.py  graph_chi_squared_dataset1.py  graph_f_test.py  graph_f_test_dataset1.py  graph_p_value.py  graph_p_value_dataset.py  graph_t_test.py  graph_t_test_dataset1.py  graph_z_test.py  graph_z_test_dataset1.py  run_all_dataset.py  run_all_simulated.py
src/: bench_dataset_1.hpp  csv_reader.hpp  dataset_1.csv  jl_projector.hpp  utils.hpp
